# partage-livres

./: pyproject.toml
.github/workflows/: deploy.yml
output/: index.html
src/html/: index.html
